# splitter_rust_orchestrator

./: Cargo.toml  Dockerfile  build.rs
src/: client.rs  main.rs
