[package]
name = "splitter_rust_orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
dotenv = "0.15.0"
tonic-build = "0.8.4"


[dependencies]
# tokio + rustls
anyhow = "1.0"
futures = "0.3"
structopt = "0.3"
tokio = { version = "1.20.0", features = ["macros"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
futures-util = "0.3.25"
trybuild = "1.0.73"
proc_macro2_helper = "0.2.9"
bytes = "1.3.0"
prost = "0.11.5"
prost-derive = "0.11.5"
tonic = "0.8.3"
tokio-stream = "0.1.11"
futures-core = "0.3.25"
async-stream = "0.3.3"
rand = "0.8.5"
dotenv = "0.15.0"
